--- a/indx.html
+++ b/indx.html
@@ -1,34 +1,56 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>layout5</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body style="background-color: black;">
-    <!-- image -->
-    <section>
-        <div class="line_1"></div>
-        <div class="line_2"></div>
-        <div class="main_img"></div>
-      </section>
-      <!-- orange part -->
-      <div class="container">
-        <div class="row">
-  
-        
 
+<head>
+  <title>layout5</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body style="background-color: black;">
+  <!-- image -->
+  <section>
+    <div class="line_1"></div>
+    <div class="line_2"></div>
+    <div class="main_img"></div>
+  </section>
+  <!-- orange part -->
+  <div class="row">
+    <div class="col-lg-7">
+      <div class="orange">
+        <div class="bi">
+          <h1>bi</h1><sub>coded</sub>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eveniet laudantium! Maiores tempora quam est
+          dolorem recusandae eveniet vero voluptatibus nesciunt. Blanditiis debitis nam maiores, ipsam dolorem corporis?
+          Quod molestiae sit recusandae pariatur voluptate molestias! Rem accusantium ducimus consectetur? Dicta.</p>
+          </div>
+        <div class="logo">
+          <div class="logo1"><img src="logo1.png"></div>
+          <div class="logo2"><img src="logo2.png"></div>
+          <div class="logo3"><img src="logo3.png"></div>
+          <div class="logo4"><img src="logo4.png"></div>
         </div>
-      </div>    
+      </div>
+    </div>
+    </div>
+    <!-- syan part -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
