--- a/indx.html
+++ b/indx.html
@@ -25,10 +25,12 @@
       <div class="orange">
         <div class="bi">
           <h1>bi</h1><sub>coded</sub>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eveniet laudantium! Maiores tempora quam est
-          dolorem recusandae eveniet vero voluptatibus nesciunt. Blanditiis debitis nam maiores, ipsam dolorem corporis?
-          Quod molestiae sit recusandae pariatur voluptate molestias! Rem accusantium ducimus consectetur? Dicta.</p>
-          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eveniet laudantium! Maiores tempora quam
+            est
+            dolorem recusandae eveniet vero voluptatibus nesciunt. Blanditiis debitis nam maiores, ipsam dolorem
+            corporis?
+            Quod molestiae sit recusandae pariatur voluptate molestias! Rem accusantium ducimus consectetur? Dicta.</p>
+        </div>
         <div class="logo">
           <div class="logo1"><img src="logo1.png"></div>
           <div class="logo2"><img src="logo2.png"></div>
@@ -37,8 +39,50 @@
         </div>
       </div>
     </div>
+    <!-- trend -->
+    <div class="col-lg-5">
+      <div class="trend"style="margin-top:50px; margin-right:200px;">TREND</div>
+
     </div>
-    <!-- syan part -->
+  </div>
+  <!-- business -->
+  <div class="row">
+    <div class="col-lg-10">
+    <div class="business">BUSINESS</div>
+    <div class="flyer">FLYER</div>
+      <div class="creative">CREATIVE BRANDING AGENCY</div>
+  </div>
+  </div>
+  <!-- cyan part -->
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="cyan">
+        <div class="a">
+          <h1><b>A</b></h1></div>
+          <div class="peregraph">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas sequi eveniet dolore officiis facere quo
+            libero quae nesciunt. Error consequuntur eos sint praesentium asperiores nam aperiam, deserunt non incidunt
+            velit sit commodi. Dolorum in consequatur esse? Et praesentium cumque, modi iste tempore fuga doloremque,
+            quo pariatur vel est placeat doloribus?</p>
+        </div>
+        <div class="hr"></div>
+        <div class="hr_2"></div>
+        <div class="image">
+          <div class="image_1" style="margin-right:50px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
+            <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
+          </svg></div>
+            <div class="image_2" style="margin-right:100px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
+              <path d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z"/>
+            </svg></div>
+              <div class="image_3" style="margin-right:150px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+              </svg></div>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
