--- a/indx.html
+++ b/indx.html
@@ -13,7 +13,10 @@
 </head>
 
 <body style="background-color: black;">
+  <div class="orange"></div>
+  <div class="cyan"></div>
   <!-- image -->
+  <div class="container">
   <section>
     <div class="line_1"></div>
     <div class="line_2"></div>
@@ -22,9 +25,9 @@
   <!-- orange part -->
   <div class="row">
     <div class="col-lg-7">
-      <div class="orange">
+      <div class="orange_part">
         <div class="bi">
-          <h1>bi</h1><sub>coded</sub>
+          <p class="coded">bi<h2><sub>coded</sub></h2></p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, eveniet laudantium! Maiores tempora quam
             est
             dolorem recusandae eveniet vero voluptatibus nesciunt. Blanditiis debitis nam maiores, ipsam dolorem
@@ -41,29 +44,42 @@
     </div>
     <!-- trend -->
     <div class="col-lg-5">
-      <div class="trend"style="margin-top:50px; margin-right:200px;">TREND</div>
+      <div class="trend" style="margin-top:50px; margin-right:200px;">TREND</div>
 
     </div>
   </div>
   <!-- business -->
   <div class="row">
     <div class="col-lg-10">
-    <div class="business">BUSINESS</div>
-    <div class="flyer">FLYER</div>
+      <div class="business">BUSINESS</div>
+      <div class="flyer">FLYER</div>
       <div class="creative">CREATIVE BRANDING AGENCY</div>
-  </div>
+    </div>
   </div>
   <!-- black part -->
   <div class="row">
     <div class="col-lg-6">
-     <div class="black"><h3>GRAPHICS BRANDING<br><br>INFOGRAPHICS<br><br>MOTION GRAPHICS </h3></div>
-     </div>
-     
-<!-- cyan part -->
+      <div class="black">
+        <h3>GRAPHICS BRANDING<br><br>INFOGRAPHICS<br><br>MOTION GRAPHICS </h3>
+      </div>
+      <div class="location_img" style="padding-left:170px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+          class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+          <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+        </svg></div> <div class="location"><b>London,pawel,12B/A</b></div>
+      <div class="call_img"  style="padding-left:170px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+      </svg></div> <div class="call"> <b>(012)345 678</b></div>
+      <div class="mail_img"  style="padding-left:170px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+          class="bi bi-envelope" viewBox="0 0 16 16">
+          <path
+            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+        </svg></div>  <div class="mail"><b>contact@email.com</b></div>
+    </div>
+    <!-- cyan part -->
     <div class="col-lg-6">
-      <div class="cyan">
+      <div class="cyan_part">
         <div class="a">A</div>
-          <div class="peregraph">
+        <div class="peregraph">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas sequi eveniet dolore officiis facere quo
             libero quae nesciunt. Error consequuntur eos sint praesentium asperiores nam aperiam, deserunt non incidunt
             velit sit commodi. Dolorum in consequatur esse? Et praesentium cumque, modi iste tempore fuga doloremque,
@@ -72,22 +88,28 @@
         <div class="hr"></div>
         <div class="hr_2"></div>
         <div class="image">
-          <div class="image_1" style="margin-right:200px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
-            <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
-          </svg></div>
-            <div class="image_2" style="margin-right:250px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
-              <path d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z"/>
+          <div class="image_1" style="margin-right:200px;"><svg xmlns="http://www.w3.org/2000/svg" width="30"
+              height="30" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16">
+              <path
+                d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z" />
             </svg></div>
-              <div class="image_3" style="margin-right:350px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-              </svg></div>
-
-        </div>
+          <div class="image_2" style="margin-right:250px;"><svg xmlns="http://www.w3.org/2000/svg" width="30"
+              height="30" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
+              <path
+                d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z" />
+            </svg></div>
+          <div class="image_3" style="margin-right:350px;"><svg xmlns="http://www.w3.org/2000/svg" width="30"
+              height="30" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+              <path
+                d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+            </svg></div>
+          </div>
+        <div class="www"><h4><b>www.business.com<b></h4></div>
       </div>
     </div>
-
+   <div class="border_left"></div>
   </div>
-
+</div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
